--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,11 @@ h1 {
 h1.wurstbrot {
     background-color: aquamarine;
 }
+
+.red {
+    height: 100px;
+    width: 200px;
+    background-color: red;
+    position: relative;
+    top: 50px;
+}
